frontend/eventportal/src/index.css
/*
BASE HTML
*/

:root {
  --white-color-hsl: 0, 0%, 100%;
  --white-color: hsl(var(--white-color-hsl));

  --orange: #EF7C4E;
  --orange-bg: #ff7b00;
  --orange-bg-light: #fca555;
  --success: #0FBE0C;
  --bg-success: #CDFFCC;
  --bg-denied: #ffcccc;
  --denied: #F6050B;
  --gray: #F6F7F9;
  --muted-color: #95959C;

  --sp-orange-color: hsl(16, 80%, 60%);
  --sp-orange-color-light: hsl(16, 80%, 70%);
  --sp-orange-color-very-light: hsl(16, 80%, 95%);
}

@font-face {
  font-family: 'rubik';
  src: local('rubik'),
    url('./static/fonts/Rubik/Rubik-VariableFont_wght.ttf') format("truetype");
}

html,
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'rubik';
  -ms-word-break: break-word;
  word-break: break-word;

  background-image: url('./static/images/icons/socialpassLogo_gray.svg');
  background-repeat: repeat;
  background-size: 10vw;
}

/* #root {
  width: 100vw;
  max-width: 956px;
  max-height: 95vh;
  display: flex;
  align-items: center;
} */

h1 {
  font-size: 2.69rem;
  font-weight: bold;
}

h2 {
  font-size: 1.89em;
  font-weight: 700;
  font-style: bold;
}

h3 {
  font-size: 1.33rem;
}

h4 {
  font-size: 1.23rem;
}

h5 {
  font-size: 1.05rem;
}

img {
  max-width: 100%;
}

button {
  cursor: pointer;
}

p {
  font-weight: 300;
  font-size: 1.3rem;
  color: #95959C;
}

small {
  font-style: normal;
  font-weight: 300;
  font-size: 12px;
  color: #959191;
}

footer {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  bottom: 0;
  padding: 1.5rem;
}

.text-color-primary {
  color: var(--orange);
}

/* BEGIN HEADER ELEMENTS */
.header {
  position: relative;
  margin-bottom: 3rem;
  border-radius: 50px 50px 0 0;
  width: 100%;
  height: 20rem;
  min-height: 20rem;
  background: linear-gradient(to left, var(--orange-bg), var(--orange-bg-light));

  transition: all 0.2s ease-in;
  -webkit-transition: all 0.2s ease-in;
}

.small-header {
  position: relative;
  background-image: linear-gradient(to left, var(--sp-orange-color-light), var(--sp-orange-color));
  align-items: center;
  min-height: 188px;
  height: 23.9%;
  background-size: auto;
  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, .5);
  overflow: hidden;

  transition: all 0.2s ease-in;
  -webkit-transition: all 0.2s ease-in;
}

.container-fluid {
  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);
  border-radius: 50px;
  overflow: hidden;
}

.sp-header-logo-img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
}

.sp-footer {
  position: relative;
  bottom: 0;
  width: 100%;
}

.back-button {
  color: white;
  position: absolute;
  display: flex;
  top: 70%;
  left: 5%;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.back-button:hover h4 {
  opacity: 0.7;

  transition: all 0.1s ease-in;
  -webkit-transition: all 0.1s ease-in;
}

.team-info-img {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  top: 75%;
  left: 6%;

  transition: all 0.2s ease-in;
  -webkit-transition: all 0.2s ease-in;
}

.team-info-img img {
  height: 128px;
  width: 128px;
  border: 8px solid white;
  border-radius: 70px;
  background: white;
}

/* END HEADER ELEMENTS */
/* BEGIN HEADER MEDIA QUERIES */
/* PORTRAIT MODE PHONES */

/* LANDSCAPE MODE PHONES */
@media (max-width: 767px) and (orientation: landscape) {
  .team-info-img img {
    height: 96px;
    width: 96px;
    border: 8px solid white;
    border-radius: 70px;
    background: white;
  }
}

/* END HEADER MEDIA QUERIES */

.main-contents {
  padding: 3rem;
}

.centered-img {
  top: 50%;
  transform: translateY(50%);
  -ms-transform: translateY(50%);
  -moz-transform: translateY(50%);
  -webkit-transform: translateY(13%);
  -o-transform: translateY(25%);
}

.container-fluid {
  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);
  border-radius: 50px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  /* Hides scrollbar on IE10+ */
  scrollbar-width: none;
  /* Hides scrollbar on Firefox */
}

.container-fluid::-webkit-scrollbar {
  display: none;
  /* Hides scrollbar on Safari and Chrome */
}

.card {
  height: 95%;
  border: none;
}

.card-active {
  height: 12rem;
  border-radius: 20px;
  color: #000;
  border: 1.5px solid var(--orange) !important;
}

.card-disabled {
  border-radius: 20px;
  color: var(--muted-color) !important;
}


/*
BOOSTRAP OVERRIDES
*/

.border-color-primary {
  border: 1.5px solid var(--orange);
}

.text-edit {
  color: var(--orange);
  cursor: pointer;
  text-decoration: underline;
}

.text-edit:hover {
  color: var(--orange);
  text-decoration: underline;
  transition: filter 0.2s;
  filter: brightness(0.7)
}

.ticket-select {
  min-height: 50px !important;
  min-width: 50px !important;
  width: 100%;
  height: 100%;
  text-align: left !important;
}

.btn-primary {
  background: var(--orange);
  border-radius: 9px;
  color: white;
  border: none;
  min-height: 60px;
  font-weight: 700;
  padding: 0;
  margin: 0;
  width: 100%;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn-primary:hover {
  background: var(--orange);
  transition: filter 0.2s;
  filter: brightness(0.9)
}

.btn-primary:disabled {
  opacity: .5;
  cursor: not-allowed;
}

.text-muted {
  color: var(--muted-color);
}

.btn-secondary {
  height: 12rem;
  background: #FFFFFF;
  /* Small Button Text */
  color: black;
  font-weight: bold;
  text-align: center;
  border-radius: 20px;
}

.bg-success {
  background-color: var(--bg-success) !important;
  color: var(--success);
  border-radius: 7px;
  width: 60%;
}

.bg-gray {
  position: relative;
  background-color: var(--gray) !important;
  border-radius: 0px 0px 50px 0px;
  width: 35%;
  height: 100%;
  margin-top: -3rem;
  margin-right: -3rem;
}

.bg-denied {
  background: var(--bg-denied) !important;
  color: var(--denied);
  border-radius: 7px;
  width: 60%;
}
/* ... */

